@@ -1,3 +1,10 @@
+2016-10-27  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/arts/__init__.py: Added refine_grid().
+
+	Function to refine a grid in a GriddedField. The data is interpolated to
+	match the new coordinates.
+
 2016-10-21  Oliver Lemke  <olemke@core-dump.info>
 
 	* typhon/version.py: Set DEVBUILD back to True after release.
